<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Inf_o_apk"
        style="@style/groupStylegray_200cornerRadius"
        android:layout_width="339dp"
        android:layout_height="141dp"
        android:baselineAligned="false"
        android:gravity="start"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.219">

        <TextView
            android:id="@+id/txtTemperaturapom"
            style="@style/txtLexendregular20"
            android:layout_width="174dp"
            android:layout_height="58dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.157"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.228"
            android:text="@string/msg_temperatura_po" />

        <TextView
            android:id="@+id/txt23C"
            style="@style/txtLexendbold40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/lbl_23_c"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.104"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.807" />

        <ImageView
            android:id="@+id/Domek"
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.877"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription"
            android:src="@drawable/img_38934671" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txtData"
        style="@style/txtLexendsemibold13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtWitajXYZ2"
        android:text="@string/msg_poniedzia_ek_0" />

    <TextView
        android:id="@+id/txtWitajXYZ2"
        style="@style/txtLexendsemibold32"
        android:layout_width="294dp"
        android:layout_height="45dp"
        android:layout_gravity="start"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079"
        android:text="@string/lbl_witaj_xyz" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Wilgotnosc"
        style="@style/groupStylegray_200cornerRadius"
        android:layout_width="@dimen/_155pxh"
        android:layout_height="@dimen/_150pxh"
        android:baselineAligned="false"
        android:gravity="start"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48">

        <TextView
            android:id="@+id/txtTemperaturaurz3"
            style="@style/txtLexendregular16"
            android:layout_width="117dp"
            android:layout_height="48dp"
            android:text="@string/lbl_wilgotno"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.578"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageWaterdrop"
            android:layout_width="@dimen/_49pxh"
            android:layout_height="@dimen/_49pxh"
            android:layout_gravity="start"
            android:scaleType="fitXY"
            android:src="@drawable/img_waterdrop1190"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.019"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/txtThirtySix2"
            style="@style/txtLexendbold36"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/lbl_36"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.933" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/TempUrzadzenia"
        style="@style/groupStylegray_200cornerRadius"
        android:layout_width="@dimen/_155pxh"
        android:layout_height="@dimen/_150pxh"
        android:baselineAligned="false"
        android:gravity="start"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48">

        <TextView
            android:id="@+id/txtTemperaturaurz2"
            style="@style/txtLexendregular16"
            android:layout_width="105dp"
            android:layout_height="42dp"
            android:text="@string/msg_temperatura_urz"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt75C2"
            style="@style/txtLexendbold36_1"
            android:layout_width="145dp"
            android:layout_height="42dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/lbl_75_c"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.64"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.888" />

        <ImageView
            android:id="@+id/imageWaterdrop2"
            android:layout_width="@dimen/_49pxh"
            android:layout_height="@dimen/_49pxh"
            android:layout_gravity="start"
            android:scaleType="fitXY"
            android:src="@drawable/img_waterdrop1190"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.049"
            tools:ignore="ContentDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/SilaSygnalu"
        style="@style/groupStylegray_200cornerRadius"
        android:layout_width="347dp"
        android:layout_height="140dp"
        android:baselineAligned="false"
        android:gravity="start"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.752">

        <TextView
            android:id="@+id/txt40dbm2"
            style="@style/txtLexendbold36_1"
            android:layout_width="145dp"
            android:layout_height="54dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/lbl_40dbm"
            android:textColor="#9D39EB"
            android:textSize="31dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.115"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.737" />

        <ImageView
            android:id="@+id/image3"
            android:layout_width="110dp"
            android:layout_height="96dp"
            android:scaleType="fitXY"
            android:src="@drawable/img_wifianalyzer1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.886"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.431"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/txtTemperaturaurz4"
            style="@style/txtLexendregular16"
            android:textSize="@dimen/_20pxh"
            android:layout_width="171dp"
            android:layout_height="44dp"
            android:text="@string/msg_si_a_sygna_u_w"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.142"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.201" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="394dp"
        android:layout_height="67dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.991">

        <TextView
            android:id="@+id/txtHomeOne2"
            style="@style/txtLexendmedium11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:ellipsize="end"
            android:lineSpacingExtra="@dimen/_3pxh"
            android:singleLine="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.267"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.692"
            android:text="@string/lbl_home" />

        <ImageView
            android:id="@+id/imageSettings2"
            android:layout_width="@dimen/_19pxh"
            android:layout_height="@dimen/_20pxh"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.717"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.531"
            tools:ignore="ContentDescription"
            android:src="@drawable/img_settings" />

        <ImageView
            android:id="@+id/imageVolume2"
            android:layout_width="@dimen/_22pxh"
            android:layout_height="@dimen/_22pxh"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription"
            android:src="@drawable/img_volume" />

        <ImageView
            android:id="@+id/imageHome2"
            android:layout_width="@dimen/_18pxh"
            android:layout_height="@dimen/_18pxh"
            android:layout_gravity="start"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.276"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.326"
            tools:ignore="ContentDescription"
            android:src="@drawable/img_home" />

        <Button
            android:id="@+id/Settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.758"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.473"
            android:color="#66FF0000"
            android:alpha="0"/>

        <Button
            android:id="@+id/StatisticButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:color="#66FF0000"
            android:text="Button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.473" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="85dp"
        android:layout_height="23dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.891">

        <View
            android:id="@+id/viewEllipseTwo"
            android:layout_width="@dimen/_11pxh"
            android:layout_height="@dimen/_11pxh"
            android:background="@drawable/rectangle_bg_bluegray_100_90_radius_5_5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.648"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/viewEllipseOne"
            android:layout_width="@dimen/_11pxh"
            android:layout_height="@dimen/_11pxh"
            android:background="@drawable/rectangle_bg_gray_501_radius_5_5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.337"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="59dp"
        android:layout_height="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>