<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Lampka"
        style="@style/groupStylegray_200cornerRadius"
        android:layout_width="@dimen/_155pxh"
        android:layout_height="@dimen/_150pxh"
        android:baselineAligned="false"
        android:gravity="start"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.278">

        <TextView
            android:id="@+id/txtLampkaprzybiu"
            style="@style/txtLexendregular16"
            android:layout_width="120dp"
            android:layout_height="43dp"
            android:text="@string/msg_lampka_przy_biu"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.457"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.504" />

        <ImageView
            android:id="@+id/imageLightbulb"
            android:layout_width="@dimen/_32pxh"
            android:layout_height="@dimen/_46pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_lightbulb"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.048"
            tools:ignore="ContentDescription"
            tools:src="@drawable/img_lightbulb" />

        <Button
            android:id="@+id/relaybutton"
            android:layout_width="115dp"
            android:layout_height="37dp"
            android:text="ON / OFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLampkaprzybiu" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txtData"
        style="@style/txtLexendsemibold13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtWitajXYZ2"
        android:text="@string/msg_poniedzia_ek_0" />

    <TextView
        android:id="@+id/txtWitajXYZ2"
        style="@style/txtLexendsemibold32"
        android:layout_width="294dp"
        android:layout_height="45dp"
        android:layout_gravity="start"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079"
        android:text="@string/lbl_witaj_xyz" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="394dp"
        android:layout_height="67dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.991">

        <TextView
            android:id="@+id/txtHomeOne2"
            style="@style/txtLexendmedium11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:ellipsize="end"
            android:lineSpacingExtra="@dimen/_3pxh"
            android:singleLine="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.267"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.692"
            android:text="@string/lbl_home" />

        <ImageView
            android:id="@+id/imageSettings2"
            android:layout_width="@dimen/_19pxh"
            android:layout_height="@dimen/_20pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.717"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.531"
            tools:ignore="ContentDescription"
            tools:src="@drawable/img_settings" />

        <ImageView
            android:id="@+id/imageVolume2"
            android:layout_width="@dimen/_22pxh"
            android:layout_height="@dimen/_22pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_volume"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription"
            tools:src="@drawable/img_volume" />

        <ImageView
            android:id="@+id/imageHome2"
            android:layout_width="@dimen/_18pxh"
            android:layout_height="@dimen/_18pxh"
            android:layout_gravity="start"
            android:scaleType="fitXY"
            android:src="@drawable/img_home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.276"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.326"
            tools:ignore="ContentDescription"
            tools:src="@drawable/img_home" />

        <Button
            android:id="@+id/statisticButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:color="#66FF0000"
            android:text="Button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.473" />

        <Button
            android:id="@+id/settings2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:color="#66FF0000"
            android:text="Button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.758"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.473" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="85dp"
        android:layout_height="23dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.891">

        <View
            android:id="@+id/viewEllipseTwo"
            android:layout_width="@dimen/_11pxh"
            android:layout_height="@dimen/_11pxh"
            android:background="@drawable/rectangle_bg_bluegray_100_90_radius_5_5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.351"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/viewEllipseOne"
            android:layout_width="@dimen/_11pxh"
            android:layout_height="@dimen/_11pxh"
            android:background="@drawable/rectangle_bg_gray_501_radius_5_5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.783"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>